# Anagrams

./: .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml
src/: main.py  test_words.py  words.py
