[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "anagrams"
description = "Find all valid English anagrams of a set of letters."
version = "0.0.0"

keywords = ["anagrams", "words", "permutations"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]

requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
all = ["black==24.8.0", "pylint==3.3.1", "pytest==8.3.3", "thx==0.6.0"]

[project.license]
name = "MIT"
file = "LICENSE.md"
content-type = "text/markdown"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/MThib885/anagrams"
homepage = "https://github.com/MThib885/anagrams"

[[project.authors]]
name = "Marion Thibaudeau"
email = "marion.thibaudeau@gmail.com"

[tool.hatch.build.targets.sdist]
include = ["src/**/.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
src = ""

[tool.thx.jobs]
lint = "pylint src"
format = "black src"
test = "pytest"
